objects/Invoice_Allocation_Template_Line_Item__c/Invoice_Allocation_Template_Line_Item__c.object-meta.xml
<CustomObject>
    <description>This is Invoice Allocation Template Line Item object, will be used for client invoice invoice allocation line items.</description>
    <label>Invoice Allocation Template Line Item</label>
    <nameField>
        <displayFormat>IATLI-{000000}</displayFormat>
        <label>IATLI</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Allocation Template Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>