objects/Invoice_Allocation_Template_Line_Item__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Invoice Allocation Template Line Items</relationshipLabel>
    <relationshipName>Invoice_Allocation_Template_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>