objects/Invoice_Allocation_Template_Line_Item__c/fields/Invoice_Allocation_Template__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Allocation_Template__c</fullName>
    <label>Invoice Allocation Template</label>
    <referenceTo>Invoice_Allocation_Template__c</referenceTo>
    <relationshipLabel>Invoice Allocation Template Line Items</relationshipLabel>
    <relationshipName>Invoice_Allocation_Template_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>